# The-Evolution-of-Todo

./: .gitignore  README.md  database.py  main.py  push_to_hf.py  requirements.txt
.claude/agents/: feature-implementer.md  qa-reviewer.md
.specify/memory/: constitution.md
backend/: README.md  database.py
backend/models/: __init__.py  task.py
backend/routes/: tasks.py
frontend/app/: error.tsx  loading.tsx  page.tsx
frontend/components/: TaskForm.tsx  TaskList.tsx
middleware/: __init__.py  jwt_auth.py
models/: __init__.py  task.py
phase 1/: README.md
phase 1/specs/: task-organization-checklist.md
phase 2/: .env.example  README.md
phase 2/backend/: Dockerfile  README.md  database.py  main.py  todo.db
phase 2/frontend/: .env.production  README.md  next.config.js  package-lock.json  package.json
phase-1/: LICENSE  README.md
phase-1/source/: pyproject.toml
phase-1/source/tests/: test_entities.py  test_repository.py  test_task_service.py  test_value_objects.py
phase-1/source/todo.egg-info/: SOURCES.txt
phase-1/source/todo/cli/: main.py
phase-1/source/todo/cli/commands/: add.py  delete.py  help.py  list.py  search.py  sort.py  update.py
phase-1/source/todo/domain/: entities.py  errors.py  repository.py  value_objects.py
phase-1/source/todo/services/: task_service.py
phase-1/specs/: cli-state-scope.md  data-model.md  quickstart.md  tasks.md  todo-domain.md
phase-2/: .gitignore
phase-2/backend/: Dockerfile  database.py  main.py  requirements.txt
phase-3/: .env.example  README.md  docker-compose.yml
routes/: __init__.py  tasks.py
(+178 files in other folders)
