[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todo"
version = "1.0.0"
description = "A CLI todo application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
todo = "todo.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["todo*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
